# odoo-surface-mcp

./: .gitignore  LICENSE  README.md  SURFACE.md  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
odoo_surface_mcp/: __init__.py  __main__.py  cache.py  main.py  odoo_client.py  server.py
odoo_surface_mcp/tools/: debug.py  discovery.py  intent.py  planning.py  supporting.py
scripts/: list-tools.mjs  smoke-binary.mjs  smoke-guidance.mjs
skills/: edit_view_arch.md  generate_diagram_png.md  inject_snippet.md  migrate_binary_field.md  translate_char_field.md  translate_html_field.md  upload_asset.md  upload_attachment.md
src/: cache.ts  index.ts  odooClient.ts  server.ts  utils.ts
src/tools/: debug.ts  discovery.ts  guidance.ts  intent.ts  planning.ts  supporting.ts  website.ts
workflows/: create_blog_post.md  create_website_page.md  translate_blog_post.md  translate_website_page.md  website_page_with_assets.md
